--- a/Omnifood/content/index.html
+++ b/Omnifood/content/index.html
@@ -18,6 +18,7 @@
     />
     <link href="CSS/style.css" rel="stylesheet" />
     <link href="CSS/general.css" rel="stylesheet" />
+    <link href="CSS/queries.css" rel="stylesheet" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -33,6 +34,7 @@
       <a href="#"
         ><img src="img/omnifood-logo.png" alt="omnifood logo" class="logo"
       /></a>
+
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">How it works</a></li>
@@ -42,6 +44,11 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -569,7 +576,7 @@
             </li>
           </ul>
           <p class="copyright">
-            copyright &copy; 2027 by omnifood Inc, all rights reserved
+            Copyright &copy; 2027 by omnifood Inc, All Rights reserved
           </p>
         </div>
 
